Deleted unused function.

--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -2,7 +2,7 @@
 
 <html>
    <head>
-         <title>RBN Charts </title>
+         <title>Skimmer Dashboard </title>
        <link href="style/style.css" type="text/css" rel="stylesheet" /> 
 	 <!---- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />-->
 <meta http-equiv="Pragma" content="no-cache" />
