--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -9,15 +9,16 @@
 <meta http-equiv="Expires" content="0" />
 <meta http-equiv="refresh" content="120">
 <script src="node_modules/chart.js/dist/chart.umd.js"></script>
-<!--
+
       <script src= 
 "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> 
     </script> 
-    -->
-
+   
+<!--
 <script src= 
 "jQuery/3.7.1/jquery-3.7.1.js"> 
     </script> 
+      -->
 
 
    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
@@ -109,7 +110,9 @@
  <option value="EU">DX</option>
    </select>  
   <label for="dxcall">dxcall</label>
-  <input  type="text" id="dxcall" name="dxcall" value = "xx" onchange="TableDraw()" ><br><br>
+  <input  type="text" id="dxcall" name="dxcall" value = "xx" onchange="TableDraw()" >
+  <label for="dxcallcountry">dxcall country</label>
+  <input  type="text" id="dxcallcountry" name="dxcallcountry" value = "xx" onchange="TableDraw()" ><br><br>
 <br />
 </div>  
 
