--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -8,7 +8,8 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 <meta http-equiv="refresh" content="120">
-<script src="node_modules/chart.js/dist/chart.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!--script src="node_modules/chart.js/dist/chart.umd.js"></script-->
 
       <script src= 
 "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> 
@@ -21,11 +22,12 @@
       -->
 
 
-   <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-   -->
-   <link rel="stylesheet" href="leaflet/leaflet.css" />
+   
+   <!--link rel="stylesheet" href="leaflet/leaflet.css" />
 <script src="leaflet/leaflet.js"></script>
+-->
    <script src="main2.js"></script>
    <script src="tabledraw.js"></script>
    </head>
@@ -105,7 +107,7 @@
 </select>
 <label for="dx">Table filter &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>	
 <select id="dx" onchange="TableDraw()" >
- <option value="%">Select</option>
+ <option value="xx">Select</option>
  <option value="ALL">ALL</option>
  <option value="EU">DX</option>
    </select>  
