--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
    <head>
          <title>Skimmer Dashboard </title>
        <link href="style/style.css" type="text/css" rel="stylesheet" /> 
 	 <!---- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />-->
-<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Cache-Control" content="no-store" />
 <meta http-equiv="Expires" content="0" />
 <meta http-equiv="refresh" content="120">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!--script src="node_modules/chart.js/dist/chart.umd.js"></script-->
 
@@ -65,7 +66,7 @@
 </select>
 <label for="decountry">decountry</label>
   <input  type="text" id="decountry" name="decountry" value = "xx" onchange="myFunction()" >
-<label for="Mode">Mode</label>
+<label for="mode">Mode</label>
 <select id="mode" name="mode" onchange="myFunction()">
 <option value="xx">Select</option>
 <option value="CW">CW</option>
@@ -110,6 +111,7 @@
  <option value="xx">Select</option>
  <option value="ALL">ALL</option>
  <option value="EU">DX</option>
+ 
    </select>  
   <label for="dxcall">dxcall</label>
   <input  type="text" id="dxcall" name="dxcall" value = "xx" onchange="TableDraw()" >
