--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -7,7 +7,7 @@
 	 <!---- <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />-->
 <meta http-equiv="Cache-Control" content="content="no-cache" />
 <meta http-equiv="Expires" content="0" />
-<meta http-equiv="refresh" content="240">
+	 <!--<meta http-equiv="refresh" content="240">-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!--script src="node_modules/chart.js/dist/chart.umd.js"></script-->
@@ -38,6 +38,7 @@
     </center>
     -->
     <body onload="myFunction()"> 
+    
    <div class="topnav"  >
     <a href="#home" class="active">Skimmer dashboard</a>
      <a href="javascript:void(0);" class="icon" onclick="menuFunction()">
@@ -48,7 +49,7 @@
 
    </div>
 	 <div class="Menu" >
-          <button onclick="myFunction()">Page reload</button>
+          <button onclick="dynamicRefresh()">Page reload dynamically</button>
           &nbsp;&nbsp;
           <button onclick="TableDraw()">Table Reload</button>
           <br />
@@ -159,6 +160,12 @@ function menuFunction() {
     x.style.display = "block";
   }
 }
+</script>
+
+<script>
+function dynamicRefresh(){
+  setInterval(myFunction, 15000);
+  }
 </script>
 	  
 	            </body>
