Auto refresh & worked DXCC check

--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -37,7 +37,9 @@
     <a href="https://www.hamqsl.com/solar.html" title="Click to add Solar-Terrestrial Data to your website!"><img src="https://www.hamqsl.com/solar101pic.php"></a>
     </center>
     -->
-    <body onload="myFunction()"> 
+    <body onload="skimmerDataLoad()"> 
+
+
     
    <div class="topnav"  >
     <a href="#home" class="active">Skimmer dashboard</a>
@@ -49,14 +51,14 @@
 
    </div>
 	 <div class="Menu" >
-          <button onclick="dynamicRefresh()">Page reload dynamically</button>
+          <button onclick="skimmerDataLoad()">Page reload</button>
           &nbsp;&nbsp;
           <button onclick="TableDraw()">Table Reload</button>
           <br />
           <br />
           <div id="menu">
           <label for="Server">DB server &nbsp; </label>
-<select id="Server" name="Server" onchange="myFunction()">
+<select id="Server" name="Server" onchange="skimmerDataLoad()">
      <option value="xx">Select</option>
 <option value="127.0.0.1:54000">Localhost</option>
 <option value="192.168.1.40:54000">Laptop</option>
@@ -66,7 +68,7 @@
 <option value="192.168.1.187:54000">T580</option>
 </select>
 <label for="de_cont">Spotter continent</label>
-<select id="de_cont" name="de_cont" onchange="myFunction()">
+<select id="de_cont" name="de_cont" onchange="skimmerDataLoad()">
 <option value="xx">Select</option>
 <option value="EU">EU</option>
 <option value="NA">NA</option>
@@ -75,9 +77,9 @@
 <option value="OC">OC</option>
 </select>
 <label for="decountry">decountry</label>
-  <input  type="text" id="decountry" name="decountry" value = "xx" onchange="myFunction()" >
+  <input  type="text" id="decountry" name="decountry" value = "xx" onchange="skimmerDataLoad()" >
 <label for="mode">Mode</label>
-<select id="mode" name="mode" onchange="myFunction()">
+<select id="mode" name="mode" onchange="skimmerDataLoad()">
 <option value="xx">Select</option>
 <option value="CW">CW</option>
 <option value="FT4">FT4</option>
@@ -85,7 +87,7 @@
 <option value="RTTY">RTTY</option>
 </select>
 <label for="ChartBand">Band</label>
-<select id="ChartBand" name="ChartBand" onchange="myFunction()">
+<select id="ChartBand" name="ChartBand" onchange="skimmerDataLoad()">
      <option value="xx">Select</option>
 <option value="20M">20M</option>
 <option value="160M">160M</option>
@@ -106,7 +108,7 @@
 <div >
 
      <label for="Source">Source</label>
-     <input  type="text" id="Source" name="Source" value = "xx" onchange="myFunction()" >
+     <input  type="text" id="Source" name="Source" value = "xx" onchange="skimmerDataLoad()" >
 <!--
      <label for="Source">Data source  </label>
 <select id="Source" name="Source" onchange="myFunction()">
@@ -164,8 +166,11 @@ function menuFunction() {
 
 <script>
 function dynamicRefresh(){
-  setInterval(myFunction, 15000);
+  setInterval(skimmerDataLoad, 15000);
   }
+</script>
+      <script>
+    dynamicRefresh();
 </script>
 	  
 	            </body>
