--- a/Web Page/index.html
+++ b/Web Page/index.html
@@ -15,14 +15,16 @@
       <script src= 
 "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> 
     </script> 
-   
+ 
+    
 <!--
 <script src= 
 "jQuery/3.7.1/jquery-3.7.1.js"> 
     </script> 
-      -->
+    --> 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+ 
+<link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
    
@@ -104,7 +106,14 @@
 <option value="2M">2M</option>
 <option value="%">%</option>
 </select>
+<label for="SkimMode">SkimMode</label>
+<select id="SkimMode" name="SkimMode" onchange="skimmerDataLoad()">
+     <option value="xx">Select</option>
+<option value="CQ">CQ</option>
+<option value="ALL">ALL</option>
+<option value="DE">DE</option>
 
+</select>
 <div >
 
      <label for="Source">Source</label>
